@@ -1,25 +1,27 @@
 /*
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
+ * Copyright (c) 2011-2019, FrostWire(R). All rights reserved.
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.limegroup.gnutella.gui.tables;
 
 import javax.swing.table.AbstractTableModel;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-
 
 /**
  * Handles common tasks associated with storing the DataLine's of a table.
@@ -27,58 +29,51 @@ import java.util.List;
  * AbstractTableModel.  However, because the function of the DataLineList was
  * really to handle all interactions with the data, it essentially was a model.
  * Now, because the two classes are combined, the model can fire its own events.
+ *
  * @author Sam Berlin
  */
 public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableModel
-    implements DataLineModel<T, E> {
-
+        implements DataLineModel<T, E> {
     /**
-     * 
+     *
      */
     private static final long serialVersionUID = -974830504558996194L;
-
-    /**
-     * Internally used list object storing the DataLines.
-     */
-    protected List<T> _list = new ArrayList<T>();
-
     private static final int ASCENDING = 1;
     private static final int DESCENDING = -1;
-
-    /**
-     * Variable for whether or not the current sorting scheme
-     * is ascending (value 1) or descending (value -1).
-     */
-    protected int _ascending = ASCENDING;
-
-    /**
-     * Variable for which column is currently being sorted.
-     */
-    protected int _activeColumn = -1;
-
     /**
      * Variable to determine which DataLine class
      * to create instances of
      */
     private final Class<? extends T> _dataLineClass;
-
     /**
      * Variable for the instance of the DataLine that'll be used
      * to determine column length/names/classes.
      */
     private final T _internalDataLine;
-
+    /**
+     * Internally used list object storing the DataLines.
+     */
+    protected final List<T> _list = new ArrayList<>();
+    /**
+     * Variable for whether or not the current sorting scheme
+     * is ascending (value 1) or descending (value -1).
+     */
+    protected int _ascending = ASCENDING;
+    /**
+     * Variable for which column is currently being sorted.
+     */
+    protected int _activeColumn = -1;
     /**
      * Variable for whether or not this list has been sorted
      * at least once.
      */
-    protected boolean _isSorted = false;
+    private boolean _isSorted = false;
 
     /*
      * Constructor -- creates the model, tying it to
      * a specific DataLine class.
      */
-    public BasicDataLineModel(Class<? extends T> dataLineClass) {
+    protected BasicDataLineModel(Class<? extends T> dataLineClass) {
         _dataLineClass = dataLineClass;
         _internalDataLine = createDataLine();
     }
@@ -87,7 +82,7 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
     public String[] getToolTipArray(int row, int col) {
         return _list.get(row).getToolTipArray(col);
     }
-    
+
     public boolean isTooltipRequired(int row, int col) {
         return _list.get(row).isTooltipRequired(col);
     }
@@ -110,7 +105,7 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
     //Implements DataLineModel interface.
     public void sort(int col) {
         if (col == _activeColumn) {
-            if(_ascending == DESCENDING) {
+            if (_ascending == DESCENDING) {
                 unsort();
                 return;
             } else {
@@ -123,15 +118,15 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
         _isSorted = true;
         resort();
     }
-    
+
     // Re-sort the list to provide real-time sorting
     public void resort() {
         if (_isSorted) {
             doResort();
             fireTableDataChanged();
-         }
+        }
     }
-    
+
     /**
      * Stops sorting.
      */
@@ -139,13 +134,12 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
         _isSorted = false;
         _activeColumn = -1;
     }
-    
-    
+
     /**
      * Implementation of resorting.
      */
     protected void doResort() {
-        Collections.sort(_list, this);
+        _list.sort(this);
     }
 
     /*
@@ -154,7 +148,7 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
      */
     public boolean needsResort() {
         return _isSorted &&
-               _internalDataLine.isDynamic(_activeColumn);
+                _internalDataLine.isDynamic(_activeColumn);
     }
 
     //Implements DataLineModel interface
@@ -163,27 +157,26 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
         _list.clear();
         fireTableDataChanged();
     }
-    
-    //Cleans up all the datalines.
+
+    //Cleans up all the data lines.
     protected void cleanup() {
-        int end = _list.size();
-        for(int i = 0; i < end; i++) {
-            _list.get(i).cleanup();
+        for (T t : _list) {
+            t.cleanup();
         }
     }
 
-   /**
+    /**
      * Basic linear update.
      * Extending classes may wish to override this function to provide
-     * a fine-tuned refresh, possibly recieving feedback from each
+     * a fine-tuned refresh, possibly receiving feedback from each
      * row after it is updated.  The return value can be used to notify
      * the Mediator of information related to the refresh.
+     *
      * @return null
      */
     public Object refresh() {
         int end = _list.size();
-        for (int i = 0; i < end; i++)
-            _list.get(i).update();
+        for (T t : _list) t.update();
         fireTableRowsUpdated(0, end);
         return null;
     }
@@ -201,32 +194,27 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
 
     /**
      * Instantiates a DataLine.
-     *
+     * <p>
      * This uses reflection to create an instance of the DataLine class.
      * The dataLineClass Class is used to determine which class should
      * be created.
      * Failure to create results in AssertFailures.
-     *
+     * <p>
      * Extending classes should override this to change the way
      * DataLine's are instantiated.
      */
-    public T createDataLine() {
+    protected T createDataLine() {
         try {
-            T dl = _dataLineClass.newInstance();
-            return dl;
-        } catch (IllegalAccessException e) {
-            throw new RuntimeException(e);
-        } catch (InstantiationException e) {
-            throw new RuntimeException(e);
-        } catch (ClassCastException e) {
+            return _dataLineClass.getDeclaredConstructor().newInstance();
+        } catch (IllegalAccessException | InstantiationException | ClassCastException | InvocationTargetException | NoSuchMethodException e) {
             throw new RuntimeException(e);
         }
     }
-    
+
     /**
      * Returns an initialized new dataline.
      */
-    public T getNewDataLine(E o) {
+    private T getNewDataLine(E o) {
         T dl = createDataLine();
         dl.initialize(o);
         return dl;
@@ -235,15 +223,15 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
     /**
      * Determines where the DataLine should be inserted.
      * Runs in log(n) time ArrayLists and linear time for LinkedLists.
-     *
+     * <p>
      * Extending classes should override this to change the method
      * used to determine where to insert a new DataLine.
-     *
+     * <p>
      * The current methodology is to use Collections.binarySearch
      * with _list as the list, the DataLine as the key, and this
      * as the Comparator.
      */
-    public int getSortedPosition(T dl) {
+    private int getSortedPosition(T dl) {
         // Collections.binarySearch return notes:
         // index of the search key, if it is contained in the list;
         // otherwise, (-(insertion point) - 1). The insertion point
@@ -264,14 +252,14 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
 
     /**
      * Helper function.
-     *
+     * <p>
      * Adds a DataLine initialized by the object to row 0.
-     *
+     * <p>
      * This should be overriden only if you want the default,
      * non-sorting add to go someplace other than row 0.
-     *
+     * <p>
      * Delegates to add(Object, int).
-     *
+     * <p>
      * Extending classes should maintain the delegation to add(Object, int).
      */
     public int add(E o) {
@@ -280,9 +268,9 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
 
     /**
      * Helper function.
-     *
+     * <p>
      * Uses getNewDataLine(Object) and add(DataLine, int).
-     *
+     * <p>
      * Extending classes can override this, but it is recommended
      * that they override the two above methods instead.
      */
@@ -301,9 +289,9 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
 
     /**
      * Adds a DataLine to the list at a row.
-     *
+     * <p>
      * All forms of add(..) eventually end up here.
-     *
+     * <p>
      * Extending classes should override this if they want
      * to maintain a HashMap of any type for speedier access.
      */
@@ -315,10 +303,10 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
 
     /**
      * Helper function.
-     *
+     * <p>
      * Uses getNewDataLine(Object), getSortedPosition(DataLine),
      * and add(DataLine, int)
-     *
+     * <p>
      * Extending classes can override this, but it is recommended
      * they override the above mentioned methods instead.
      */
@@ -329,19 +317,19 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
 
     /**
      * Helper function.
-     *
+     * <p>
      * Uses getSortedPosition(DataLine) and add(DataLine, int).
-     *
+     * <p>
      * Extending classes can override this, but it is recommended
      * they override the above mentioned methods instead.
      */
-    public int addSorted(T dl) {
-        return add(dl, getSortedPosition(dl));
+    public void addSorted(T dl) {
+        add(dl, getSortedPosition(dl));
     }
 
     //Implements the DataLineModel interface.
     public T get(int row) {
-        if(row == -1)
+        if (row == -1)
             return null;
         else
             return _list.get(row);
@@ -421,7 +409,7 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
     //Implements the TableModel method
     // Ignores the update if the row doesn't exist.
     public void setValueAt(Object o, int row, int col) {
-        if(row >= 0 && row < _list.size()) {
+        if (row >= 0 && row < _list.size()) {
             _list.get(row).setValueAt(o, col);
             fireTableRowsUpdated(row, row);
         }
@@ -429,15 +417,13 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
 
     /**
      * @return true if List contains the Object o in column col.
-     * @notes Extending classes may wish to override this function
-     *  if a particular column is searched frequently, using a HashMap.
-     *  The add(Object, int) & sort function should be overriden to initialize
-     *  the HashMap.
+     * if a particular column is searched frequently, using a HashMap.
+     * The add(Object, int) & sort function should be overriden to initialize
+     * the HashMap.
      */
     public boolean contains(Object o, int col) {
-        int end = _list.size();
-        for (int i = 0; i < end; i++) {
-            if (_list.get(i).getValueAt(col).equals(o))
+        for (T t : _list) {
+            if (t.getValueAt(col).equals(o))
                 return true;
         }
         return false;
@@ -445,16 +431,14 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
 
     /**
      * @return true if the List contains a DataLine that was initialized
-     *  by Object o.
-     * @notes Extending classes may wish to override this function
-     *  if searching is done frequently, using a HashMap.
-     * The add(Object, int) & sort function should be overriden to intialize
+     * by Object o.
+     * if searching is done frequently, using a HashMap.
+     * The add(Object, int) & sort function should be overriden to initialize
      * the HashMap.
      */
     public boolean contains(Object o) {
-        int end = _list.size();
-        for (int i = 0; i < end; i++) {
-            if (_list.get(i).getInitializeObject().equals(o))
+        for (T t : _list) {
+            if (t.getInitializeObject().equals(o))
                 return true;
         }
         return false;
@@ -469,9 +453,8 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
 
     /**
      * @return the index of the first DataLine that contains Object o
-     *  in column col.
-     * @notes Extending classes may wish to override this function
-     *  if a particular column is searched frequently, using a HashMap.
+     * in column col.
+     * if a particular column is searched frequently, using a HashMap.
      * The add(Object, int) & sort function should be overriden to initialize
      * the HashMap.
      */
@@ -484,10 +467,9 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
         return -1;
     }
 
-   /**
+    /**
      * @return the index of the first DataLine that was initialized by Object o.
-     * @notes Extending classes may wish to override this function
-     *  if searching is done frequently, using a HashMap.
+     * if searching is done frequently, using a HashMap.
      * The add(Object, int) & sort function should be overriden to initialize
      * the HashMap.
      */
@@ -513,7 +495,7 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
      * Returns the LimeTableColumn at the specific column this data line.
      */
     public LimeTableColumn getTableColumn(int col) {
-        if( _internalDataLine == null)
+        if (_internalDataLine == null)
             return null;
         else
             return _internalDataLine.getColumn(col);
@@ -527,7 +509,7 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
     }
 
     /**
-     * Returns the number of columns as speicifed by the data line.
+     * Returns the number of columns as specified by the data line.
      */
     public int getColumnCount() {
         if (_internalDataLine == null)
@@ -535,7 +517,7 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
         else
             return _internalDataLine.getColumnCount();
     }
-    
+
     /**
      * Returns whether or not the specified column is clippable.
      */
@@ -545,13 +527,13 @@ public class BasicDataLineModel<T extends DataLine<E>, E> extends AbstractTableM
         else
             return _internalDataLine.isClippable(col);
     }
-    
+
     public int getTypeAheadColumn() {
         if (_internalDataLine == null)
             return -1;
         else
             return _internalDataLine.getTypeAheadColumn();
-    }        
+    }
 
     /**
      * Returns the name of the TableColumn as specified by the data line.
