@@ -20,18 +20,23 @@ package org.gudy.azureus2.core3.util;
 import java.io.InputStreamReader;
 import java.io.LineNumberReader;
 import java.security.AccessControlException;
-import java.util.Locale;
 import java.util.StringTokenizer;
 import java.util.TimeZone;
 
 /**
- *
  * @author Olivier
  * @author gubatron
  */
 public class Constants {
-    public static final String DEFAULT_ENCODING = "UTF8";
-    static final Locale LOCALE_ENGLISH = new Locale("en", "");
+    static final String INFINITY_STRING = "\u221E"; // "oo";pa
+    // keep the CVS style constant coz version checkers depend on it!
+    // e.g. 2.0.8.3
+    //      2.0.8.3_CVS
+    //      2.0.8.3_Bnn       // incremental build
+    private static final String OSName = System.getProperty("os.name");
+    private static final boolean isWindows = OSName.toLowerCase().startsWith("windows");
+    // If it isn't windows or osx, it's most likely an unix flavor
+    private static final boolean isWindowsVista;
 
     static {
         try {
@@ -47,50 +52,20 @@ public class Constants {
         }
     }
 
-    static final String INFINITY_STRING = "\u221E"; // "oo";pa
-    static final int CRAPPY_INFINITY_AS_INT = 365 * 24 * 3600; // seconds (365days)
-    static final long CRAPPY_INFINITE_AS_LONG = 10000 * 365 * 24 * 3600; // seconds (10k years)
-
-    // keep the CVS style constant coz version checkers depend on it!
-    // e.g. 2.0.8.3
-    //      2.0.8.3_CVS
-    //      2.0.8.3_Bnn       // incremental build
-
-    static String APP_NAME = "Vuze";
-    static final String AZUREUS_VERSION = "5.4.0.1_CVS";
-
-    private static final boolean FORCE_NON_CVS = System.getProperty("az.force.noncvs", "0").equals("1");
-
-    static final boolean IS_CVS_VERSION = isCVSVersion(AZUREUS_VERSION) && !FORCE_NON_CVS;
-
-    private static final String OSName = System.getProperty("os.name");
-
-    public static final boolean isOSX = OSName.toLowerCase().startsWith("mac os");
-    public static final boolean isLinux = OSName.equalsIgnoreCase("Linux");
-    public static final boolean isWindows = OSName.toLowerCase().startsWith("windows");
-    // If it isn't windows or osx, it's most likely an unix flavor
-
-    private static final boolean isWindowsVista;
-
     static {
         if (isWindows) {
             Float ver = null;
             try {
-                ver = new Float(System.getProperty("os.version"));
+                ver = Float.valueOf(System.getProperty("os.version"));
             } catch (Throwable ignored) {
             }
-
             if (ver == null) {
                 isWindowsVista = false;
             } else {
                 float f_ver = ver;
-
                 isWindowsVista = f_ver == 6;
-
                 if (isWindowsVista) {
-
                     LineNumberReader lnr = null;
-
                     try {
                         Process p =
                                 Runtime.getRuntime().exec(
@@ -100,20 +75,13 @@ public class Constants {
                                                 "HKLM\\Software\\Microsoft\\Windows NT\\CurrentVersion",
                                                 "/v",
                                                 "CSDVersion"});
-
                         lnr = new LineNumberReader(new InputStreamReader(p.getInputStream()));
-
                         while (true) {
-
                             String line = lnr.readLine();
-
                             if (line == null) {
-
                                 break;
                             }
-
                             if (line.matches(".*CSDVersion.*")) {
-
                                 break;
                             }
                         }
@@ -128,61 +96,10 @@ public class Constants {
                     }
                 }
             }
-
-
         } else {
-
             isWindowsVista = false;
         }
     }
-
-    private static final boolean isAndroid;
-
-    static {
-        String vm_name = System.getProperty("java.vm.name", "");
-        isAndroid = vm_name.equalsIgnoreCase("Dalvik");
-    }
-
-    // Android is roughly 1.6 (reports as 0 for java.version)
-
-    static final String JAVA_VERSION;
-
-    static {
-        String java_version = isAndroid ? "1.6" : System.getProperty("java.version");
-        int api_level;
-
-        if (isAndroid) {
-
-            String sdk_int = System.getProperty("android.os.build.version.sdk_int", "0");
-
-            try {
-                api_level = Integer.parseInt(sdk_int);
-
-                if (api_level > 0 && api_level <= 8) {
-
-                    java_version = "1.5";
-                }
-            } catch (Throwable e) {
-            }
-        }
-
-        JAVA_VERSION = java_version;
-    }
-
-
-    private static boolean
-    isCVSVersion(
-            String version) {
-        return (version.indexOf("_") != -1);
-    }
-
-    /**
-     * compare two version strings of form n.n.n.n (e.g. 1.2.3.4)
-     *
-     * @param version_1
-     * @param version_2
-     * @return -ve -> version_1 lower, 0 = same, +ve -> version_1 higher
-     */
 
     private static int
     compareVersions(
@@ -191,44 +108,31 @@ public class Constants {
         try {
             version_1 = version_1.replaceAll("_CVS", "_B100");
             version_2 = version_2.replaceAll("_CVS", "_B100");
-
             if (version_1.startsWith(".")) {
                 version_1 = "0" + version_1;
             }
             if (version_2.startsWith(".")) {
                 version_2 = "0" + version_2;
             }
-
             version_1 = version_1.replaceAll("[^0-9.]", ".");
             version_2 = version_2.replaceAll("[^0-9.]", ".");
-
             StringTokenizer tok1 = new StringTokenizer(version_1, ".");
             StringTokenizer tok2 = new StringTokenizer(version_2, ".");
-
             while (true) {
                 if (tok1.hasMoreTokens() && tok2.hasMoreTokens()) {
-
                     int i1 = Integer.parseInt(tok1.nextToken());
                     int i2 = Integer.parseInt(tok2.nextToken());
-
                     if (i1 != i2) {
-
                         return (i1 - i2);
                     }
                 } else if (tok1.hasMoreTokens()) {
-
                     int i1 = Integer.parseInt(tok1.nextToken());
-
                     if (i1 != 0) {
-
                         return (1);
                     }
                 } else if (tok2.hasMoreTokens()) {
-
                     int i2 = Integer.parseInt(tok2.nextToken());
-
                     if (i2 != 0) {
-
                         return (-1);
                     }
                 } else {
@@ -236,9 +140,7 @@ public class Constants {
                 }
             }
         } catch (Throwable e) {
-
             e.printStackTrace();
-
             return (0);
         }
     }
